--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
                 <div class="color powder"><p>Powder Blue</p><p>#96aec7ff</p></div>
                 <div class="color lapis"><p>Lapis Lazuli</p><p>#4b6d91ff</p></div>
                 <div class="color prussian"><p>Prussian Blue</p><p>#083654ff</p></div>
+                <div class="color darkgray"><p>Dark Gray</p><p>#080f14ff</p></div>
+                <div class="color aliceblue"><p>Aliceblue</p><p>#f0f8ff</p></div>
+            </div>
+            <div class="uses">
+                <h2>Logo</h2>
+                <div class="item logo"><img src="images/logo.png" alt=""></div>
+                <div class="item note"><p>Contrast Ratio</p><span>12.6:1</span></div>
+            </div>
+            <div class="buttons">
+                <h2>Buttons</h2>
+                <p>The following color combinations pass the following level of accessibility compliance: Normal Text WCAG AA. WCAG AAA, Large Text WCAG AA. WCAG AAA and Graphical Object WCAG AA.  </p>
+                <ul class="bts">
+                    <li class="button one">Button 1</li>
+                    <li class="button two">Button 2</li>
+                    <li class="button three">Button 3</li>
+                </ul>
+                <div class="btcolors">
+                    <p><span>Button 1:</span> Background Color:#723d46ff (Wine), text color: #f0f8ff (Aliceblue) </p>
+                    <p><span>Button 2:</span> Background Color:#083654ff (Prussian Blue), text color: #f0f8ff (Aliceblue) </p>
+                    <p><span>Button 3:</span> Background Color:#96aec7ff (Powder Blue), text color: #080F14 (Dark Gray) </p>
+                </div>
+
             </div>
         </section>
         <!-- Fonts Section -->
