--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="uses">
                 <h2>Logo</h2>
-                <div class="item logo"><img src="images/logo.png" alt=""></div>
+                <div class="item logo"><img src="images/logo.png" alt="Logo"></div>
                 <div class="item note"><p>Contrast Ratio</p><span>12.6:1</span></div>
             </div>
             <div class="buttons">
@@ -36,7 +36,15 @@
                     <p><span>Button 2:</span> Background Color:#083654ff (Prussian Blue), text color: #f0f8ff (Aliceblue) </p>
                     <p><span>Button 3:</span> Background Color:#96aec7ff (Powder Blue), text color: #080F14 (Dark Gray) </p>
                 </div>
-
+             <div class="iconbox">
+                <h2>Icons</h2>
+                <ul class="icons">
+                    <li><img src="images/2.png" alt="icon html"></li>
+                    <li><img src="images/4.png" alt="icon coding"></li>
+                    <li><img src="images/1.png" alt="icon html"></li>
+                </ul>
+                <p>Graphical Objects and User Interface Components WCAG AA:<span> PASS </span></p>
+             </div>   
             </div>
         </section>
         <!-- Fonts Section -->
