--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="buttons">
                 <h2>UI components</h2>
                 <p class="ui">Buttons</p>
-                <p>The following color combinations pass the following level of accessibility compliance: Normal Text WCAG AA. WCAG AAA, Large Text WCAG AA. WCAG AAA and Graphical Object WCAG AA.  </p>
+                <p class="uitext">The following color combinations pass the following level of accessibility compliance: Normal Text WCAG AA. WCAG AAA, Large Text WCAG AA. WCAG AAA and Graphical Object WCAG AA.  </p>
                 <ul class="bts">
                     <li class="button one">Button 1</li>
                     <li class="button two">Button 2</li>
